<resources>
    <string name="app_name">Intcore Test</string>
    <string name="enter_email">Enter Email</string>
    <string name="login_page">Login Page</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_form">Register Form</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone">Enter Phone</string>

</resources>
