<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="5dp"
    android:background="@drawable/background2">

    <TextView
        android:id="@+id/tx_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_page"
        android:textSize="32sp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textColor="#E4DBDB"
        android:textStyle="bold"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx_login"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_email"
        android:id="@+id/ed_email"
        android:inputType="textEmailAddress"
        android:textColor="#E4DBDB"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed_email"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_password"
        android:id="@+id/ed_password"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:textColor="#E4DBDB"

        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/sign_in"
       android:background="#80000000"
        android:textColor="#E4DBDB"
        android:id="@+id/btn_signin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_signin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textColor="#E4DBDB"
        android:text="@string/or"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_signin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/sign_up"
        android:background="#80000000"
        android:textColor="#E4DBDB"
        android:id="@+id/btn_signup"/>

</RelativeLayout>